Update endpoint
