# boycott-kanye/bk-backend/swagger.json
@@ -86,6 +86,21 @@
         ]
       }
     },
+    "/api/signatures/display": {
+      "get": {
+        "operationId": "SignaturesController_getAllSignatures",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Returns all signatures, with private ones having anonymous data"
+          }
+        },
+        "summary": "Get all signatures with anonymized private data",
+        "tags": [
+          "signatures"
+        ]
+      }
+    },
     "/api/signatures": {
       "post": {
         "operationId": "SignaturesController_createSignature",
